# khalid-brazilian-ecommerce-postgre

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  servers.json
docs/: OUTILS.md  TRANSFORMATION_GUIDE.md
src/: download_data.py  load_to_postgres.py  transform_to_gold.py
src/analytics/: __init__.py  analyze_data.py  check_gold_quality.py  explore_data.py  load_data.py
src/schema/: __init__.py  schema.sql
