[project]
name = "khalid-brazilian-ecommerce-postgre"
version = "0.1.0"
description = "Pipeline ETL pour le dataset Brazilian E-commerce"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.1.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "sqlalchemy-utils>=0.37.0"
]